--- a/res.qrc
+++ b/res.qrc
@@ -1,6 +1,9 @@
 <RCC>
-    <qresource prefix="/icon"/>
-    <qresource prefix="/">
-        <file>icon/pe.ico</file>
+    <qresource prefix="/icon">
+        <file alias="pe">icon/pe.ico</file>
+    </qresource>
+    <qresource prefix="/css">
+        <file alias="mainwindow">css/mainwindow.css</file>
+        <file alias="rvaToFoaWindow">css/rvaToFoaWindow.css</file>
     </qresource>
 </RCC>
